--- a/components/_dropdown.scss
+++ b/components/_dropdown.scss
@@ -16,8 +16,7 @@
   }
 
   .dropdown-content {
-    z-index: -1;
-    @apply bg-white w-40 overflow-hidden absolute right-0 bottom-auto mt-1 rounded-md shadow-lg opacity-0 transition-all duration-500 ease-in-out list-none;
+    @apply -z-1 bg-white w-40 overflow-hidden absolute left-0 md:left-[initial] right-0 bottom-auto mt-1 rounded-md shadow-lg opacity-0 transition-all duration-500 ease-in-out list-none;
     .dropdown-item {
       @apply no-underline bg-transparent block text-left text-gray-700 px-4 py-2 transition-all duration-400 ease-in-out w-full;
       &:hover {
